[gd_scene load_steps=3 format=3 uid="uid://le5uke0qc4n4"]

[ext_resource type="Script" path="res://hud_lifes.gd" id="1_yb0cq"]
[ext_resource type="Texture2D" uid="uid://fmf54r4bxofs" path="res://art/head/head_00.png" id="2_yb0cq"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_yb0cq")

[node name="FilledDot" type="Sprite2D" parent="."]
position = Vector2(32, 30)
scale = Vector2(0.315891, 0.315891)
texture = ExtResource("2_yb0cq")

[node name="FilledDot2" type="Sprite2D" parent="."]
position = Vector2(82, 30)
scale = Vector2(0.316, 0.316)
texture = ExtResource("2_yb0cq")

[node name="FilledDot3" type="Sprite2D" parent="."]
position = Vector2(134, 30)
scale = Vector2(0.316, 0.316)
texture = ExtResource("2_yb0cq")
